Fix data-table not item cell with is not showing full. Fix toggle cell is not working for table that does not have action column.

--- a/components/shapla-data-table/src/_data-table.scss
+++ b/components/shapla-data-table/src/_data-table.scss
@@ -298,5 +298,9 @@ table.shapla-data-table--mobile {
 				background-color: rgba(0, 0, 0, 0.025);
 			}
 		}
+
+		&.no-items td {
+			display: table-cell;
+		}
 	}
 }
